fix firefox alignment

--- a/css/weather34dashboard.dark.css
+++ b/css/weather34dashboard.dark.css
@@ -5772,7 +5772,6 @@ weather34mbuptime {
   left: 1px;
   z-index: 3;
 }
-
 #weather34sidebarMenu,
 .weather34sidebarMenuInner li {
   width: 15rem;
@@ -5846,19 +5845,6 @@ input[type="checkbox"] {
   color: #ff7c39;
 }
 
-.weather34sidebarMenuInner li a,
-.weather34sidebarMenuInner li a:hover {
-  float: left;
-  text-decoration: none;
-  font-size: 11px;
-  font-weight: 400;
-  cursor: pointer;
-}
-
-.weather34sidebarMenuInner li a:hover {
-  color: #ff7c39;
-}
-
 input[type="checkbox"]:checked ~ #weather34sidebarMenu {
   transform: translateX(0);
 }
@@ -5890,7 +5876,7 @@ input[type="checkbox"] {
   box-sizing: border-box;
   position: relative;
   float: left;
-  transition: all 0.3s;
+  
 }
 
 input[type="checkbox"]:checked
@@ -5898,25 +5884,37 @@ input[type="checkbox"]:checked
   > .weather34horizontal {
   box-sizing: border-box;
   opacity: 0;
-  transition: all 0.3s;
+  
 }
 
 input[type="checkbox"]:checked
   ~ .weather34sidebarIconToggle
   > .weather34cross.part-1 {
-  box-sizing: border-box;
-  margin-top: 8px;
-  transform: rotate(135deg);
-  background-color:#01a4b5
+    background: 0;
+    background-color:0;
+    border: 1px solid hsla(200, 1%, 61%, 0.4);
+    border-radius: 50%; /* one half of ( (border * 2) + height + padding ) */
+    color: 0;
+    font: "weathertext2";
+    height: 26px; 
+    min-width: 26px;
+    padding: 2px;
+    text-align: center;
+	margin-top:-8px
 }
+input[type="checkbox"]:checked
+  ~ .weather34sidebarIconToggle
+  > .weather34cross.part-1:after{content:"X";color:#01a4b5;font-size:1em}
+
 
 input[type="checkbox"]:checked
   ~ .weather34sidebarIconToggle
-  > .weather34cross.part-2 {
-  box-sizing: border-box;
-  margin-top: -9px;
-  transform: rotate(-135deg); background-color:#01a4b5
+  > .weather34cross.part-2 { 
+  display:none;
 }
+
+
+
 
 topbarimperialf,
 topbarmetricc {
@@ -5931,21 +5929,20 @@ topbarmetricc {
   font-size: 0.7em;
   font-weight: 400;
   justify-content: center;  
-  border: 1px solid hsla(200, 1%, 61%, 0.4);
 }
 
 topbarimperialf {
-  color: #aeb6bf; 
+  color: #aeb6bf;
+  border: 1px solid hsla(200, 1%, 61%, 0.4);
   opacity: .8;
 }
 
 topbarmetricc {
-  color: #aeb6bf;  
+  color: #aeb6bf;
+  border: 1px solid hsla(200, 1%, 61%, 0.4);
   opacity: .8;
 }
-.weather34thinborder {
-  width:15rem;font-size:0.1rem;border-bottom: 1px solid hsla(200, 1%, 61%, 0.1);
-	}
+.weather34thinborder{width:15rem;font-size:0.1rem;border-bottom: 1px solid hsla(200, 1%, 61%, 0.1);}
 topbarinfo {
   display: inline;
   width: 2em;
@@ -5985,26 +5982,7 @@ topbarinfo {
   margin: 0 auto;
   opacity: 1;
 }
-
-weather34menumarkerlightb {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  padding: 1px 3px;
-  color: silver;
-  border: 0;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
-  align-items: center;
-  font-family: weathertext2;
-  font-size: 12px;
-  font-weight: 400;
-  justify-content: center;
-  line-height: 12px;
-   background: #44a6b5;  
-}
-
-weather34menumarkermode,weather34menumarkerdot {
+weather34menumarkermode,weather34menumarkerdot,weather34menumarkerdotmode{
   display: inline-block;
   width: 10px;
   height: 8px;
@@ -6019,11 +5997,35 @@ weather34menumarkermode,weather34menumarkerdot {
   font-weight: 400;
   justify-content: center;
   line-height: 12px;
-  background:#f3f4f7;
+  background:#788a92;
   border: 1px solid #aeb6bf;
   opacity:.2
   
 }
+weather34menumarkerdotmode{  
+  background:#fff;
+  opacity:.5
+}
+weather34menumarkerlightb
+{
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  padding: 1px 3px;
+  color: silver;
+  border: 0;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  align-items: center;
+  font-family: weathertext2;
+  font-size: 12px;
+  font-weight: 400;
+  justify-content: center;
+  line-height: 12px;
+   background: #44a6b5;
+  
+}
+
 menuimperial,
 menumetric {
   display: inline;
@@ -6038,6 +6040,7 @@ menumetric {
   font-weight: 400;
   justify-content: center;
   border: 1px solid hsla(200, 1%, 61%, 0.2);
+  
 }
 
 menuimperial {
@@ -6045,7 +6048,7 @@ menuimperial {
 }
 
 menumetric {
-  color:  #e2752c;  
+  color:  #e2752c; 
 }
 
 menuinfobox{
@@ -6064,7 +6067,6 @@ menuinfobox{
   border: 1px solid hsla(200, 1%, 61%, 0.2);
   opacity: .8;
 }
-
 weather34menumarkerblue,
 weather34menumarkerbluegrey,
 weather34menumarkergreen,
@@ -6129,8 +6131,6 @@ weather34menumarkeruptime {
   line-height: 15px;
   background: #ff832f;
 }
-.weather34thinborder{width:15rem;font-size:0.1rem;border-bottom: 1px solid hsla(200, 1%, 61%, 0.1);}
-
 uptimesup {
   font-size: 7px;
   vertical-align: top;
@@ -6822,7 +6822,7 @@ wfstriketoday {
   width: 140px;
   margin-left: 70px;
   margin-top: -30px;
-  font-size: .55rem;
+  font-size: .5rem;
   line-height: 1;
   color: #aeb6bf;
   font-family: weathertext2;
@@ -6833,7 +6833,7 @@ wfstriketoday {
   width: 140px;
   margin-left: 70px;
   margin-top: -30px;
-  font-size: .55rem;
+  font-size: .5rem;
   line-height: .9;
   color: #aeb6bf;
   font-family: weathertext2;
